--- a/css/read_shop_item.css
+++ b/css/read_shop_item.css
@@ -1,3 +1,73 @@
+.add-author-dimensions {
+	font-size: 24px;
+	margin-top: 10px;
+}
+
+.add-author-dimensions p {
+	font-size: 20px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-left: 20px;
+}
+
+.read-add-right-wrapper {
+	display: flex;
+	flex-direction: column;
+}
+
+
+.read-add-right-rating {
+	display: flex;
+	flex-direction: column;
+	width: 250px;
+	height: 80px;
+	padding: 20px;
+	margin-top: 20px;
+	font-size: 24px;
+	background: var(--white-gray-switch);
+	box-shadow: 2px 2px 4px rgba(100, 100, 100, 0.25);
+}
+
+
+.average-rating {
+	width: 230px !important;
+	margin-top: 10px;
+}
+.average-rating span { 
+	float: right;
+	position: relative;
+}
+
+.average-rating span label {
+	cursor: default !important;
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+	font-size: 30px;
+    display:inline-block;
+    text-align:center;
+    color: var(--text-color);
+    margin-right:5px;
+    border-radius:50%;
+    -webkit-border-radius:50%;
+}
+
+.read-add-right-rating .average-rating span label i {
+	font-size: 30px;
+}
+
+.read-add-right-rating .average-rating span.checked label,
+.read-add-right-rating .average-rating span.checked ~ span label {
+	color:#F90;
+}
+
+.average-rating-number {
+	font-size: 30px;
+	float: right;
+	margin: 0;
+	margin-left: 10px;
+}
+
 /*=============================================add to cart======================================*/
 
 input[type=number] {
