--- a/css/post_add.css
+++ b/css/post_add.css
@@ -14,6 +14,15 @@
 	margin-bottom: 30px;
 }
 
+hr {
+	background: #eaeaea;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	height: 3px;
+	border: none;
+	margin: 0 50px;
+}
+
 /*------------------------------------------------------form-------------------------------------------------*/
 
 .form-wrapper {
