--- a/css/shopping_basket.css
+++ b/css/shopping_basket.css
@@ -163,16 +163,26 @@ html[data-theme="dark"] .shop-item-quantity-container {
 	top: 57px;
 }
 
+.shop-items-total-cost {
+	display: flex;
+	width: 343px;
+	margin-left: auto;
+	font-size: 27px;
+}
+
+.shop-items-total-cost p {
+	margin-left: 43px;
+	color: #000;
+}
+
 .shop-items-container .shop-items-order-form {
 	position: relative;
 	width: 100%;
-	height: 60px;
 }
 
 .shopping-basket-order {
 	cursor: pointer;
-	position: absolute;
-	right: 20px;
+	margin-left: 233px;
 	margin-top: 20px;
 	font-size: 18px;
 	font-weight: 600;
@@ -196,4 +206,22 @@ html[data-theme="dark"] .shop-item-quantity-container {
 html[data-theme="dark"] .shopping-basket-order:hover,
 html[data-theme="dark"] .shopping-basket-order:active {
 	background: #222;
+}
+
+.courier-info-wrapper {
+	width: 600px;
+	margin: 0 auto;
+	padding: 20px;
+	background: var(--white-gray-switch);
+	box-shadow: 2px 2px 6px rgba(100, 100, 100, 0.25);
+}
+
+.courier-info-wrapper .form-input-label {
+	color: var(--text-color) !important;
+}
+
+.courier-label-value {
+	font-size: 36px;
+	color: #efb700;
+	margin-left: 10px;
 }
