--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,8 @@ header {
 .theme-switch-wrapper input[type=checkbox]{
 	height: 0;
 	width: 0;
-	margin: 0;
+	margin: 0 !important;
+	border-width: 0 !important;
 	visibility: hidden;
 }
 
@@ -388,7 +389,7 @@ html[data-theme="dark"] .header-slider img {
 	width: 93.7%;
 	top: 562px;
 	left: 290px;
-	padding: 30px 40px 50px 40px;
+	padding: 50px 40px 50px 40px;
 }
 									/*------filler nav------*/
 .filler-nav {
@@ -446,7 +447,7 @@ html[data-theme="dark"] .filler-nav-img {
 .delivery-promotion {
 	width: 265px;
 	height: 515px;
-	margin-top: 30px;
+	margin-top: 50px;
 	background: var(--white-gray-switch) /*#FFFFFF*/;
 	border: 2px solid var(--border-yellow);
 	box-sizing: border-box;
@@ -481,7 +482,7 @@ html[data-theme="dark"] .delivery-promotion-img{
 	width: 900px;
 	margin-left: 20px;
 	height: 515px;
-	margin-top: 30px;
+	margin-top: 50px;
 }
 
 .categories-nav-item {
@@ -521,9 +522,58 @@ html[data-theme="dark"] .categories-nav-img{
 }
 /*------------------------------------------footer-------------------------------------------------*/
 footer {
-	width: 100%;
-	height: 317px;
-
+	display: flex;
+	padding: 40px;
 	background: var(--main-color)/*#FFD642*/;
 	box-shadow: 0px 0px 4px 1px rgba(142, 119, 0, 0.6);
+}
+
+.footer-h1 {
+	font-size: 18px;
+}
+
+.footer-info {
+	width: 600px;
+	font-size: 16px;
+	line-height: 20px;
+	padding-right: 10px;
+}
+
+.footer-info b {
+	font-weight: 900;
+}
+
+.footer-working-hours {
+	width: 300px;
+}
+
+.working-hours {
+	display: flex;
+}
+
+.working-hours-img {
+	width: 75px;
+	height: 75px;
+	margin-right: 10px;
+}
+
+html[data-theme="dark"] .working-hours-img {
+	filter: invert(90%);
+}
+
+.working-hours-list p {
+	margin: 5px 0;
+}
+
+.footer-contacts {
+	width: 300px;
+}
+
+.footer-contacts h4 {
+	font-weight: 900;
+	margin-bottom: 0;
+}
+
+.footer-contacts p {
+	margin-top: 5px;
 }
