--- a/css/read_shop_item.css
+++ b/css/read_shop_item.css
@@ -1,9 +1,25 @@
+.add-author-info {
+	height: unset !important;
+}
+
 .add-author-dimensions {
 	font-size: 24px;
 	margin-top: 10px;
 }
 
 .add-author-dimensions p {
+	font-size: 20px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-left: 20px;
+}
+
+.shop-item-stock {
+	font-size: 24px;
+	margin-top: 10px;
+}
+
+.shop-item-stock p {
 	font-size: 20px;
 	margin-top: 5px;
 	margin-bottom: 5px;
