--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,9 @@ footer {
 }
 
 .footer-h1 {
-	font-size: 18px;
+	font-size: 18px !important;
+	margin: 12px 0 !important;
+	padding: 0 !important;
 }
 
 .footer-info {
